# repo-research

./: .bight.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Pipfile  README.md  agent.py  main.py  pyproject.toml
.claude/skills/brainstorm/: SKILL.md
.claude/skills/hotspot-analysis/: SKILL.md
.claude/skills/llm-provider-setup/: SKILL.md
.github/workflows/: pr.yaml
core/: models.py  prompts.py
docs/: cli.md  development.md
docs/arch/: agui-protocol-layer.md
docs/flows/: favorites.md
frontend/: README.md  index.html  openapi.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/types/: api.ts
scripts/: update_cli_docs.py
src/agui/: __init__.py  emitter.py  renderer.py
src/api/: __init__.py  agent_endpoint.py  app.py  config.py  conversations.py  favorites.py  schemas.py
src/core/: config.py  llm.py  models.py  prompts.py
src/export/: models.py  writer.py
src/export/formats/: markdown.py
src/github_agent/: __init__.py  main.py
src/github_agent/commands/: chat.py  diagnostics.py  hotspots.py  pulse.py  resume.py  runners.py  show.py  topics.py  ui.py
src/integrations/github/: __init__.py  adapter.py  agent.py  cache.py  cached_client.py  churn_strategies.py  github_client.py  hotspot_tracker.py  models.py  tools.py
src/repo_research/: main.py  storage_paths.py
src/repo_research/commands/: __init__.py  history.py  runners.py  serve.py
src/storage/: __init__.py  conversations.py  favorites.py  serde.py
src/tools/: date_tools.py  github_adapter.py  github_models.py  github_tools.py  utils.py
src/ui/: __init__.py  app.py  components.py  favorites.py  handlers.py
tests/: conftest.py
tests/agui/: test_emitter.py  test_renderer.py  test_runner_integration.py
tests/api/: test_api.py
tests/core/: test_config.py
tests/export/: test_export_models.py  test_writer.py
tests/integrations/: test_adapter.py  test_cached_client.py  test_file_change_tracker.py  test_github_tools.py  test_hotspot_analysis.py  test_models.py  test_rework_rate_strategy.py  test_total_activity_churn.py
tests/main/: __init__.py  test_chat.py  test_prompt_execution.py  test_storage_migration.py
tests/storage/: test_conversations.py  test_serde.py
tests/tools/: test_date_tools.py  test_utils.py
tests/ui/: test_favorites.py  test_handlers.py
tools/: cached_github_tools.py  github_adapter.py  github_models.py  github_tools.py
