[project]
name = "github-agent"
version = "0.1.0"
description = "GitHub analysis tool built with LangGraph and configurable LLM providers"
readme = "README.md"
authors = [
    { name = "Andrew A", email = "AndrewADev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pygithub",
    "python-dotenv",
    "langchain",
    "langchain-anthropic",
    "langchain-ollama>=0.3.9",
    "langchain-huggingface",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-sqlite",
    "langgraph-prebuilt",
    "pydantic",
    "typer",
    "pydantic-settings>=2.11.0",
    "gradio>=5.0.0",
    "markdown>=3.9",
]

[project.scripts]
github-agent = "github_agent.main:app"


[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-mock",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["github_agent", "tools", "core"]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
env = [
    "LLM_PROVIDER=ollama",
    "OLLAMA_BASE_URL=http://localhost:11434",
    "GITHUB_TOKEN=test_github_token_12345",  # pragma: allowlist secret
    "ANTHROPIC_API_KEY=",
    "HUGGINGFACE_API_KEY=",
]
