[project]
name = "github-agent"
version = "0.1.0"
description = "GitHub analysis tool built with LangGraph and configurable LLM providers"
readme = "README.md"
authors = [
    { name = "Andrew A", email = "AndrewADev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.0,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "langchain>=1.2.10,<2.0.0",
    "langchain-anthropic>=1.3.3,<2.0.0",
    "langchain-ollama>=1.0.1,<2.0.0",
    "langchain-huggingface>=1.2.0,<2.0.0",
    "langgraph>=1.0.7,<2.0.0",
    "langgraph-checkpoint-sqlite>=3.0.3,<4.0.0",
    "langgraph-prebuilt>=1.0.7,<2.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "typer>=0.23.1,<1.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "gradio>=5.0.0,<6.0.0",
    "markdown>=3.10.2,<4.0.0",
]

[project.scripts]
github-agent = "github_agent.main:app"


[project.optional-dependencies]
dev = [
    "ruff>=0.15.1,<1.0.0",
    "pytest",
    "pytest-mock",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["github_agent", "tools", "core"]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.1,<1.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-env>=1.3.2,<2.0.0",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
env = [
    "LLM_PROVIDER=ollama",
    "OLLAMA_BASE_URL=http://localhost:11434",
    "GITHUB_TOKEN=test_github_token_12345",  # pragma: allowlist secret
    "ANTHROPIC_API_KEY=",
    "HUGGINGFACE_API_KEY=",
]
